--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-streamlit
-scikit-learn
-xgboost
-pandas
-numpy
-matplotlib
+streamlit==1.43.2
+scikit-learn==1.6.1
+xgboost==3.0.0
+pandas==2.2.3
+numpy==2.2.4
+matplotlib==3.10.1
